fix(prism-editor): lineNumbers wrap

--- a/packages/au2-prism/src/prism-editor.scss
+++ b/packages/au2-prism/src/prism-editor.scss
@@ -13,7 +13,7 @@
 }
 
 .prism-editor-wrapper {
-  width: 100%;
+  // width: 100%;
   height: 100%;
   display: flex;
   align-items: flex-start;
@@ -38,6 +38,7 @@
     padding: 0;
     overflow: hidden;
     width: 100%;
+    // word-break: break-all;
   }
 
   .prism-editor__line-numbers {
